# r2env

./: .coverage  .gitignore  .pylintrc  MANIFEST.in  Makefile  README.md  run_tests.sh  setup.cfg  setup.py  tox.ini
.github/workflows/: ci.yml  codeql-analysis.yml  semgrep.yml
r2env/: __init__.py  __main__.py  core.py  exceptions.py  ipdb.py  package.py  package_manager.py  r2env.py  repl.py  tools.py
r2env/config/: config.json  profiles.json  r0.py  radare2.py
r2env/db/: __init__.py  r0.py  radare2.py
r2env/test/: test_core.py  test_package.py  test_repl.py
requirements/: build.txt  dist.txt  test.txt
