[metadata]
license_file = LICENSE
version = 0.3.1
name = r2env
author = pancake
# author_email = 'pancake@nopcode.org, me@0xmurphy.me'
author_email = pancake@nopcode.org
description = radare2 multiple version and environment installation tool
long_description = file:README.md
long_description_content_type = text/markdown
url = https://www.radare.org/
project_urls =
    Source = https://github.com/radareorg/r2env
    Documentation = https://github.com/radareorg/r2env
classifiers =
    Environment :: Console
    Environment :: MacOS X
    Environment :: Win32 (MS Windows)
    License :: OSI Approved
    Natural Language :: English
    Operating System :: MacOS :: MacOS X
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX
    Operating System :: POSIX :: BSD
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6

[options]
packages =
    r2env
python_requires = >=3.6
install_requires=
    dploy >= 0.1.2
    colorama >= 0.4.4
    GitPython
setup_requires =
    setuptools_scm >= 1.15
include_package_data = True

[options.entry_points]
console_scripts =
    r2env = r2env.repl:main
